--- a/gatsby-theme-shared-nav/src/styles/global.css
+++ b/gatsby-theme-shared-nav/src/styles/global.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   color: var(--text);
@@ -6,9 +10,4 @@ body {
   font-size: 18px;
   line-height: 1.4;
   margin: 0;
-}
-
-main {
-  margin: 3rem auto;
-  max-width: 54ch;
 }
