--- a/gatsby-theme-shared-nav/src/styles/nav.module.css
+++ b/gatsby-theme-shared-nav/src/styles/nav.module.css
@@ -1,4 +1,4 @@
-.shared-nav {
+.container {
   background: var(--black);
   color: var(--white);
   display: flex;
@@ -7,19 +7,20 @@
   padding: 0.5rem 5vw;
 }
 
-.shared-nav nav {
+.shared-nav {
   display: flex;
+  gap: 0.5rem;
   justify-content: space-between;
 }
 
-.shared-nav a {
+.link {
   color: inherit;
   padding: 0.25rem;
   text-decoration: none;
 }
 
-.shared-nav a:focus,
-.shared-nav a:hover {
+.link:focus,
+.link:hover {
   background: var(--white);
   color: var(--black);
 }
